Separate file for docs intro

--- a/docs/crypto-ise.tex
+++ b/docs/crypto-ise.tex
@@ -1,5 +1,8 @@
 \documentclass{article}
 
+\usepackage{amssymb}
+\usepackage{amsmath}
+\usepackage[margin={2cm}]{geometry}
 \usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{listings}
@@ -16,8 +19,7 @@
 \tableofcontents
 
 \section{Introduction}
-
-Lorem ipsum doler set amet.
+\import{./}{crypto-ise.introduction.tex}
 
 \section{ISE Specification}
 \import{./}{crypto-ise.specification.tex}
