Add "concepts" file for the documentation
- Concepts file to explain the various different ideas the ISE
  draws on.
- Add shared style document for the tex.

 On branch master
 Your branch is up-to-date with 'origin/master'.

 Changes to be committed:
	modified:   .gitignore
	modified:   README.md
	new file:   docs/crypto-ise.concepts.tex
	modified:   docs/crypto-ise.introduction.tex
	modified:   docs/crypto-ise.specification.tex
	modified:   docs/crypto-ise.tex
	modified:   docs/references.bib
	new file:   docs/shared.sty

--- a/docs/crypto-ise.introduction.tex
+++ b/docs/crypto-ise.introduction.tex
@@ -1,3 +1,10 @@
 
-Lorem ipsum doler set amet.
 
+The aim of this project is to
+extend the RISC-V architecture in order to accelerate common cryptographic
+operations associated with block ciphers.
+It proposes a new Instruction Set Extension (ISE)
+which acts analogously to a floating-point co-processor,
+but targeted at cryptographic operations.
+The aim is for the ISE to be applicable to a wide range of algorithms
+which work on different bit-widths and with different block sizes.
