--- a/docs/crypto-ise.tex
+++ b/docs/crypto-ise.tex
@@ -1,12 +1,6 @@
 \documentclass{article}
 
-\usepackage{amssymb}
-\usepackage{amsmath}
-\usepackage[margin={2cm}]{geometry}
-\usepackage{hyperref}
-\usepackage{graphicx}
-\usepackage{listings}
-\usepackage{import}
+\usepackage{shared}
 
 \usepackage{biblatex}
 \addbibresource{references.bib}
@@ -20,6 +14,9 @@
 
 \section{Introduction}
 \import{./}{crypto-ise.introduction.tex}
+
+\section{Concepts \& Ideas}
+\import{./}{crypto-ise.concepts.tex}
 
 \section{ISE Specification}
 \import{./}{crypto-ise.specification.tex}
