--- a/docs/crypto-ise.specification.tex
+++ b/docs/crypto-ise.specification.tex
@@ -1,2 +1,13 @@
 
+This section specifies the ISE in terms of it's state and the instructions
+which operate on that state.
+
+\subsection{State}
+
 Lorem ipsum doler set amet.
+
+
+\subsection{Instructions}
+
+Lorem ipsum doler set amet.
+
