--- a/docs/crypto-ise.introduction.tex
+++ b/docs/crypto-ise.introduction.tex
@@ -8,3 +8,14 @@ which acts analogously to a floating-point co-processor,
 but targeted at cryptographic operations.
 The aim is for the ISE to be applicable to a wide range of algorithms
 which work on different bit-widths and with different block sizes.
+
+The key pieces of functionality the ISE aims to provide are:
+
+\begin{itemize}
+\item Flexible {\em packed arithmetic}, where multiple values of varying
+    lengths can be operated on inside a register in parallel.
+\item Byte level access to the general purpose register file for certain
+    instructions. Principally loads, stores and arithmetic.
+\item Memory Scatter/Gather functionality for bytes.
+\item Multi-precision integer arithmetic.
+\end{itemize}
