--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -25,8 +25,25 @@
 \usetikzlibrary{decorations.text}
 \usetikzlibrary{fit}
 
+% -----------------------------------------
+
 % Design choice notes
 \newcommand{\designnote}[1]{\footnote{#1}}
+
+\newcommand{\encspace}{{\em custom1} }
+\newcommand{\encopcode}{$0101011$}
+
+\newcommandx{\ASM}[1]{{\tt #1}}
+
+\newcommandx{\INST}[2]{
+  \ASM{#1}
+  \\
+  \begin{algorithm}[H]
+  #2
+  \end{algorithm}
+}
+
+% -----------------------------------------
 
 % calligraphic (e.g., for mathematical spaces)
 \newcommandx{\C}[1]{\ensuremath{\mathcal #1}\xspace}
@@ -100,6 +117,7 @@
 % memory, general-purpose and special-purpose registers
 \newcommandx{\MEM}[3][1={},2={},3={}]{{\ensuremath\IfEq{#1}{*}{{\sf  MEM}[{#2}]^{#3}}{{\sf   MEM}}}\xspace}
 \newcommandx{\GPR}[2][1={},2={}     ]{{\ensuremath\IfEq{#1}{*}{{\sf  GPR}[{#2}]     }{{\sf   GPR}}}\xspace}
+\newcommandx{\CPR}[2][1={},2={}     ]{{\ensuremath\IfEq{#1}{*}{{\sf  CPR}[{#2}]     }{{\sf   CPR}}}\xspace}
 \newcommandx{\SPR}[3][     2={},3={}]{{\ensuremath\IfEq{#2}{*}{{\sf   #1}[{#3}]     }{{\sf    #1}}}\xspace}
 
 % set (approximate) styles
