--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -14,6 +14,7 @@
 \usepackage{xstring}
 \usepackage{import}
 \usepackage{hyperref}
+\usepackage{multirow}
 
 \usetikzlibrary{arrows}
 \usetikzlibrary{arrows.meta}
