--- a/docs/crypto-ise.specification.tex
+++ b/docs/crypto-ise.specification.tex
@@ -220,7 +220,9 @@ result.
 \end{itemize}
 
 For all twiddle arithmetic instructions, the {\tt bX} fields are two bits
-wide.
+wide. \designnote{ It may yet become nessesary to use a more compact
+encoding for the {\tt bX} fields. The alternative is to force
+{\tt rs2} to be the same as {\tt rd} and use an I-type encoding.}
 
 Note that by having {\tt rs1} the same as {\tt rs2}, the twiddle
 arithmetic instructions can be used to arbitrarily re-arrange bytes
