--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -30,6 +30,7 @@
 
 % Design choice notes
 \newcommand{\designnote}[1]{\footnote{#1}}
+\newcommandx{\note}[1]{{\bf Note:} #1}
 
 \newcommand{\encspace}{{\em custom1} }
 \newcommand{\encopcode}{$0101011$}
