--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -37,6 +37,9 @@
 
 \newcommandx{\ASM}[1]{{\tt #1}}
 
+\newcommandx{\BB}[2]{\bitbox{#1}{{\tt #2}}}
+\newcommandx{\BH}[2]{\bitbox{#1}{{\bf #2}}}
+
 \newcommandx{\INST}[2]{
   \ASM{#1}
   \\
